qeb-hwt-github-app/base/deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: qeb-hwt-webhook-receiver
spec:
  test: false
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    deploymentconfig: qeb-hwt-webhook-receiver
    app.kubernetes.io/name: qeb-hwt
    app.kubernetes.io/component: webhook-receiver
    app.kubernetes.io/managed-by: aicoe-thoth-devops
  template:
    metadata:
      labels:
        deploymentconfig: qeb-hwt-webhook-receiver
        app.kubernetes.io/name: qeb-hwt
        app.kubernetes.io/component: webhook-receiver
        app.kubernetes.io/managed-by: aicoe-thoth-devops
    spec:
      containers:
        - name: webhook-receiver
          image: qeb-hwt-webhook-receiver
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
        - name: ultrahook-qeb-hwt
          image: ultrahook
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 50Mi
