qeb-hwt-github-app/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: qeb-hwt-webhook-receiver
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentconfig: qeb-hwt-webhook-receiver
